# pytest-parallel

./: .envrc  .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pytest_parallel/: __init__.py  coordinator.py  plugin.py  worker.py
tests/: test_integration.py  test_options.py  test_partition.py  test_worker.py
