[project]
name = "pytest-parallel"
version = "0.1.0"
description = "Small static-sharding parallel runner for pytest"
requires-python = ">=3.13"
dependencies = ["pytest>=9.0"]

[project.entry-points.pytest11]
parallel = "pytest_parallel"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "SIM",
  "RUF",
  "PT",
  "RET",
  "PIE",
  "C4",
  "T20",
  "TCH",
  "PERF",
  "FURB",
]
ignore = ["E501", "SIM105", "T201", "RET505", "SIM108", "TCH"]
