[project]
name = "joshuarli-pytest-parallel"
version = "0.2.0"
description = "Small static-sharding parallel runner for pytest"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.13"
dependencies = ["pytest>=9.0"]
keywords = ["pytest"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Repository = "https://github.com/joshuarli/pytest-parallel"

[project.entry-points.pytest11]
parallel = "pytest_parallel.plugin"

[build-system]
requires = ["uv_build>=0.11.25,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pytest_parallel"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "ty>=0.0.42",
]

[tool.ty.environment]
root = ["src"]

[tool.ty.src]
include = ["src", "tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "SIM",
  "RUF",
  "PT",
  "RET",
  "PIE",
  "C4",
  "T20",
  "TCH",
  "PERF",
  "FURB",
]
ignore = ["E501", "SIM105", "T201", "RET505", "SIM108", "TCH"]
